Fix misaligned border on mobile

--- a/_core_small.scss
+++ b/_core_small.scss
@@ -143,5 +143,5 @@ ul#navbar {
 }
 
 .download-buttons {
-    padding: 1em;
+    margin: 1em;
 }
